--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
   rxdart: ^0.23.1
   bloc_pattern: ^2.5.1
+  google_fonts: ^0.3.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,7 +44,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/telegram.png
     - assets/wpp.png
     - assets/orapma.png
   #   - images/a_dot_ham.jpeg
